main.tf
provider "aws" {
  region     = "us-east-1"
  access_key = "AKIA4MTWHE3JDBGWFVOR"
  secret_key = "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"
}

# 1. Create VPC 
resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
     Name = "production"
  }
}

# 2. Create Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id
}

# 3. Assign an elastic IP to the network interface
resource "aws_eip" "one" {
  # vpc                     = true (***This has now been Deprecated. Use "domain = true" instead)
  domain                    = "vpc"
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [
    # Must be specified as a list
    # Specifies a dependancy to enfeorce ordering
    aws_internet_gateway.gw 
    ]  
}

# 4. Create Custom Route Table
resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "Prod"
  }
}

# 5. Create a Subnet
resource "aws_subnet" "subnet-1" {
  vpc_id            = aws_vpc.prod-vpc.id
  cidr_block        =  "10.0.1.0/24"
  availability_zone =  "us-east-1a"

  tags = {
    Name = "prod-subnet"
  }

}

# 6. Associate subnet with Route Table 
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}

# 7. Create security Group to allow port 22,80,443
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web inbound traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 89
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

# 8. create a network interface with an ip in the subnet
resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]

}

output "server_publc_ip" {
  value = aws_instance.web-server-instance.public_ip
  
}

# 9. Create Ubuntu server and install/enable apache2
resource "aws_instance" "web-server-instance" {
    ami               = "ami-0c7217cdde317cfec"
    instance_type     = "t2.micro"
    availability_zone = "us-east-1a"
    key_name          = "main-key" 

    network_interface {
      device_index         = 0
      network_interface_id = aws_network_interface.web-server-nic.id
    }

    user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo Hi David Ephy! Here is Your very first web server Tech Mahindra > /var/www/html/index.html'
                EOF
        tags =  {
            Name = "web-server"
        } 
}
